actual: changed name of secret.

--- a/apps/production/actual/longhorn-crypto-secret.yaml
+++ b/apps/production/actual/longhorn-crypto-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: longhorn-crypto
+    name: actual-server-claim
     namespace: actual-server
 stringData:
     CRYPTO_KEY_VALUE: ENC[AES256_GCM,data:vNDqHwoagBsFY+04ZXnYrbdELG/47bF8EBFiqGD+28sIpEc=,iv:TlUhArAnZll0YsxZm4euI57TkBva5KNmAA1C3wZJbYY=,tag:eDdk7MycImC9PJeFFUJmbw==,type:str]
