gitea: updated claim secret.

--- a/apps/production/gitea/gitea-claim-secret.yaml
+++ b/apps/production/gitea/gitea-claim-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: gitea-claim
+    name: gitea
     namespace: gitea
 stringData:
     CRYPTO_KEY_VALUE: ENC[AES256_GCM,data:69x7+xIlC5pfYvEo4+AwudyYICyUYtXfCxWsHL01ckUJiQ==,iv:uPQEb9Qi4VamdAx3zS6jH8RABrkzExWiNJbvpRfLkDU=,tag:L0vM8jRW5BS53+OuJFVgKQ==,type:str]
