hibiscus: Added secret for pvc.
hibiscus: forgot to add kustomization.

--- a/apps/production/hibiscus-server/kustomization.yaml
+++ b/apps/production/hibiscus-server/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ingressConfig.yaml
   - hibiscus-password-secret.yaml
   - hibiscus-mysql-secret.yaml
+  - hibiscus-mysql-claim.yaml
 # patches:
 #   - path: patch.yaml
 #     target:
