--- a/apps/production/gitea/ingressConfig.yaml
+++ b/apps/production/gitea/ingressConfig.yaml
@@ -13,8 +13,8 @@ spec:
     - match: Host(`gitea.vandelocht.uk`)
       kind: Rule
       services:
-        - name: gitea-http
-          port: 3000
+        - name: gitea
+          port: 80
       # middlewares:
       #   - name: svc-gitea-headers
   tls:
