--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -114,35 +114,35 @@ spec:
     primary:
       service:
         type: LoadBalancer
-      configuration: |-
-        [mysqld]
-        authentication_policy='* ,,'
-        skip-name-resolve
-        explicit_defaults_for_timestamp
-        basedir=/opt/bitnami/mysql
-        plugin_dir=/opt/bitnami/mysql/lib/plugin
-        port=3306
-        mysqlx=0
-        mysqlx_port=33060
-        socket=/opt/bitnami/mysql/tmp/mysql.sock
-        datadir=/bitnami/mysql/data
-        tmpdir=/opt/bitnami/mysql/tmp
-        max_allowed_packet=16M
-        bind-address=0.0.0.0
-        pid-file=/opt/bitnami/mysql/tmp/mysqld.pid
-        log-error=/opt/bitnami/mysql/logs/mysqld.log
-        character-set-server=UTF8
-        slow_query_log=0
-        long_query_time=10.0
-
-        [client]
-        port=3306
-        socket=/opt/bitnami/mysql/tmp/mysql.sock
-        default-character-set=UTF8
-        plugin_dir=/opt/bitnami/mysql/lib/plugin
-
-        [manager]
-        port=3306
-        socket=/opt/bitnami/mysql/tmp/mysql.sock 
+      # configuration: |-
+      #   [mysqld]
+      #   authentication_policy='* ,,'
+      #   skip-name-resolve
+      #   explicit_defaults_for_timestamp
+      #   basedir=/opt/bitnami/mysql
+      #   plugin_dir=/opt/bitnami/mysql/lib/plugin
+      #   port=3306
+      #   mysqlx=0
+      #   mysqlx_port=33060
+      #   socket=/opt/bitnami/mysql/tmp/mysql.sock
+      #   datadir=/bitnami/mysql/data
+      #   tmpdir=/opt/bitnami/mysql/tmp
+      #   max_allowed_packet=16M
+      #   bind-address=0.0.0.0
+      #   pid-file=/opt/bitnami/mysql/tmp/mysqld.pid
+      #   log-error=/opt/bitnami/mysql/logs/mysqld.log
+      #   character-set-server=UTF8
+      #   slow_query_log=0
+      #   long_query_time=10.0
+      #
+      #   [client]
+      #   port=3306
+      #   socket=/opt/bitnami/mysql/tmp/mysql.sock
+      #   default-character-set=UTF8
+      #   plugin_dir=/opt/bitnami/mysql/lib/plugin
+      #
+      #   [manager]
+      #   port=3306
+      #   socket=/opt/bitnami/mysql/tmp/mysql.sock 
     networkPolicy:
       enabled:
