--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -114,6 +114,8 @@ spec:
     primary:
       service:
         type: LoadBalancer
+      persistence:
+        existingClaim: data-mysql-0
       # configuration: |-
       #   [mysqld]
       #   authentication_policy='* ,,'
@@ -146,3 +148,77 @@ spec:
       #   socket=/opt/bitnami/mysql/tmp/mysql.sock 
     networkPolicy:
       enabled:
+---
+apiVersion: v1
+items:
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata:
+    annotations:
+      volume.beta.kubernetes.io/storage-provisioner: driver.longhorn.io
+      volume.kubernetes.io/storage-provisioner: driver.longhorn.io
+    finalizers:
+    - kubernetes.io/pvc-protection
+    labels:
+      app.kubernetes.io/component: primary
+      app.kubernetes.io/instance: mysql
+      app.kubernetes.io/name: mysql
+    name: data-mysql-0
+    namespace: hibiscus-server
+  spec:
+    accessModes:
+    - ReadWriteOnce
+    resources:
+      requests:
+        storage: 8Gi
+    storageClassName: longhorn-crypto-per-volume
+    volumeMode: Filesystem
+    volumeName: pvc-hibiscus-mysql
+  status:
+    accessModes:
+    - ReadWriteOnce
+    capacity:
+      storage: 8Gi
+    phase: Bound
+kind: List
+metadata:
+  resourceVersion: ""
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  annotations:
+    pv.kubernetes.io/provisioned-by: driver.longhorn.io
+    volume.kubernetes.io/provisioner-deletion-secret-name: data-mysql-0
+    volume.kubernetes.io/provisioner-deletion-secret-namespace: hibiscus-server
+  finalizers:
+  - kubernetes.io/pv-protection
+  - external-attacher/driver-longhorn-io
+  name: pvc-hibiscus-mysql
+spec:
+  accessModes:
+  - ReadWriteOnce
+  capacity:
+    storage: 8Gi
+  claimRef:
+    apiVersion: v1
+    kind: PersistentVolumeClaim
+    name: data-mysql-0
+    namespace: hibiscus-server
+  csi:
+    driver: driver.longhorn.io
+    fsType: ext4
+    nodePublishSecretRef:
+      name: data-mysql-0
+      namespace: hibiscus-server
+    nodeStageSecretRef:
+      name: data-mysql-0
+      namespace: hibiscus-server
+    volumeAttributes:
+      encrypted: "true"
+      numberOfReplicas: "3"
+      staleReplicaTimeout: "2880"
+    volumeHandle: pvc-hibiscus-mysql
+  persistentVolumeReclaimPolicy: Delete
+  storageClassName: longhorn-crypto-per-volume
+  volumeMode: Filesystem
