hibiscus: created pvc via longhorn ui. Added name to manifest.

--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -115,7 +115,7 @@ spec:
       service:
         type: LoadBalancer
       persistence:
-        existingClaim: longhorn-pvc
+        existingClaim: hibiscus-mysql-pvc
       # configuration: |-
       #   [mysqld]
       #   authentication_policy='* ,,'
