--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -79,72 +79,30 @@ spec:
   url: https://charts.bitnami.com/bitnami
 
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: mysql
-  namespace: hibiscus-server
-spec:
-  timeout: 30m
-  interval: 60m
-  install:
-    crds: Create
-    remediation:
-      retries: 3
-  upgrade:
-    crds: CreateReplace
-    remediation:
-      retries: 3
-  chart:
-    spec:
-      version: "11.1.14"
-      chart: mysql
-      sourceRef:
-        kind: HelmRepository
-        name: mysql
-        namespace: hibiscus-server
-      interval: 12h
-  values:
-    global:
-      defaultStorageClass: "longhorn-crypto-per-volume"
-    auth:
-      existingSecret: hibiscus-mysql-secret
-      database: hibiscus
-      username: hibiscus
-    primary:
-      service:
-        type: LoadBalancer
-      persistence:
-        existingClaim: hibiscus-mysql-pvc
-    networkPolicy:
-      enabled:
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: longhorn-pv
-spec:
-  capacity:
-    storage: 10Gi
-  accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: longhorn
-  csi:
-    driver: driver.longhorn.io
-    fsType: ext4
-    volumeHandle: longhorn-pv
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: longhorn-pvc
+  annotations:
+    pv.kubernetes.io/bind-completed: "yes"
+  creationTimestamp: "2024-08-10T19:56:47Z"
+  finalizers:
+  - kubernetes.io/pvc-protection
+  name: hibiscus-mysql-pvc
   namespace: hibiscus-server
+  resourceVersion: "1940679"
+  uid: 56d15a66-c564-4830-84e3-05f41421146f
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: longhorn
+  - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
-
+      storage: 8Gi
+  storageClassName: longhorn-crypto-per-volume
+  volumeMode: Filesystem
+  volumeName: hibiscus-mysql-pvc
+status:
+  accessModes:
+  - ReadWriteOnce
+  capacity:
+    storage: 8Gi
+  phase: Bound
