--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -79,17 +79,42 @@ spec:
   url: https://charts.bitnami.com/bitnami
 
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
 metadata:
-  name: hibiscus-mysql-pvc
+  name: mysql
   namespace: hibiscus-server
 spec:
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 8Gi
-  storageClassName: longhorn-crypto-per-volume
-  volumeMode: Filesystem
-  volumeName: hibiscus-mysql-pvc
+  timeout: 30m
+  interval: 60m
+  install:
+    crds: Create
+    remediation:
+      retries: 3
+  upgrade:
+    crds: CreateReplace
+    remediation:
+      retries: 3
+  chart:
+    spec:
+      version: "11.1.14"
+      chart: mysql
+      sourceRef:
+        kind: HelmRepository
+        name: mysql
+        namespace: hibiscus-server
+      interval: 12h
+  values:
+    global:
+      defaultStorageClass: "longhorn-crypto-per-volume"
+    auth:
+      existingSecret: hibiscus-mysql-secret
+      database: hibiscus
+      username: hibiscus
+    primary:
+      service:
+        type: LoadBalancer
+      persistence:
+        existingClaim: hibiscus-mysql-pvc
+    networkPolicy:
+      enabled:
