hibiscus: added secret to longhorn
hibiscus: Forgot to adapt kustomization.

--- a/infrastructure/production/longhorn/kustomization.yaml
+++ b/infrastructure/production/longhorn/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ingressConfig.yaml
   - longhorn-r2-backups.yaml
   - longhorn-crypto-sc.yaml
+  - hibiscus-mysql-claim.yaml
 patches:
   - path: patch.yaml
     target:
