--- a/clusters/production/infrastructure.yaml
+++ b/clusters/production/infrastructure.yaml
@@ -59,6 +59,30 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: longhorn-config
+  namespace: flux-system
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: traefik-config
+    - name: cert-manager-config
+    - name: longhorn
+  interval: 1h
+  retryInterval: 1h
+  timeout: 2h
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infrastructure/production/longhorn/config
+  prune: true
+  wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: cert-manager
   namespace: flux-system
 spec:
