gitea: deactivated patch and added version to chart.
gitea: deactivated patch.

--- a/apps/base/gitea/manifest.yaml
+++ b/apps/base/gitea/manifest.yaml
@@ -41,6 +41,7 @@ spec:
   chart:
     spec:
       chart: gitea
+      version: "2.3.x"
       sourceRef:
         kind: HelmRepository
         name: gitea
