gitea: renamend claim secret postgres.

--- a/apps/production/gitea/gitea-postgresql-claim-secret.yaml
+++ b/apps/production/gitea/gitea-postgresql-claim-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: data-gitea-postgresql-0
+    name: data-postgresql-0 
     namespace: gitea
 stringData:
     CRYPTO_KEY_VALUE: ENC[AES256_GCM,data:WLmEDaV/MyitlVm/Gi6f66KK40iNMfvatFDpCnTj1vXvSes=,iv:PSWMEXdBuRNm0mj1R3TtNK1yRk2QbiNfevB4paE7i54=,tag:NKAQ+oQi2e3WOC9cJZBLaQ==,type:str]
