gitea: Added metadata to secret.

--- a/apps/production/gitea/gitea-claim-secret.yaml
+++ b/apps/production/gitea/gitea-claim-secret.yaml
@@ -3,6 +3,11 @@ kind: Secret
 metadata:
     name: gitea
     namespace: gitea
+    annotations:
+        meta.helm.sh/release-name: gitea
+        meta.helm.sh/release-namespace: gitea
+    labels:
+        app.kubernetes.io/managed-by: Helm
 stringData:
     CRYPTO_KEY_VALUE: ENC[AES256_GCM,data:69x7+xIlC5pfYvEo4+AwudyYICyUYtXfCxWsHL01ckUJiQ==,iv:uPQEb9Qi4VamdAx3zS6jH8RABrkzExWiNJbvpRfLkDU=,tag:L0vM8jRW5BS53+OuJFVgKQ==,type:str]
     CRYPTO_KEY_PROVIDER: ENC[AES256_GCM,data:9KJ5Aoth,iv:gjePaP5+XYf75Am0IhLpxiYlJCi6PWYVmHZVNLMNjWo=,tag:gMVgCjP14v9CavnsJGOpQw==,type:str]
