gitea: renamed secret.

--- a/apps/production/gitea/gitea-claim-secret.yaml
+++ b/apps/production/gitea/gitea-claim-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: gitea
+    name: gitea-shared-storage
     namespace: gitea
     annotations:
         meta.helm.sh/release-name: gitea
