--- a/infrastructure/production/velero/velero-secret.yaml
+++ b/infrastructure/production/velero/velero-secret.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: mysecret
+    name: velero-secret
+    namespace: velero
 type: Opaque
 stringData:
     cloud: ENC[AES256_GCM,data:0TDUf4KkvA+Kx1o5geHOHwHv4+LP0cXDR51/KEnxtFiTZaOE6yi+eStg5il2PAupqLQ4FxM2tj1utYUbqUZsTifpC/Zrmi8Rz4eEWM+rsdbaGdWLH0OY6IaB95G38B2/+6hz,iv:H/ba/HWBO6SPPZJgpgrqVz5vCFBR622y1k/ZVWyt60A=,tag:A8VCfGqkpnaZkahKZpf7rQ==,type:str]
