--- a/infrastructure/base/velero/manifest.yaml
+++ b/infrastructure/base/velero/manifest.yaml
@@ -72,3 +72,10 @@ spec:
           key: cloud
     credentials:
       existingSecret: velero-secret
+    initContainers:
+    - name: velero-plugin-for-aws
+      image: velero/velero-plugin-for-aws:v1.10.0
+      imagePullPolicy: IfNotPresent
+      volumeMounts:
+        - mountPath: /target
+          name: plugins
