--- a/infrastructure/base/velero/manifest.yaml
+++ b/infrastructure/base/velero/manifest.yaml
@@ -50,6 +50,7 @@ spec:
       - name: minio
         provider: aws
         bucket: velero
+        default: "true"
         config:
           s3Url: http://192.168.178.58:9000
           region: minio
