--- a/infrastructure/base/velero/manifest.yaml
+++ b/infrastructure/base/velero/manifest.yaml
@@ -13,6 +13,17 @@ spec:
   interval: 24h
   url: https://vmware-tanzu.github.io/helm-charts/
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: external-snapshotter
+  namespace: flux-system
+spec:
+  interval: 5m0s
+  url: https://github.com/kubernetes-csi/external-snapshotter
+  ref:
+    semver: "8.0.x"
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
