--- a/infrastructure/base/velero/manifest.yaml
+++ b/infrastructure/base/velero/manifest.yaml
@@ -56,7 +56,9 @@ spec:
       limits:
         cpu: 1000m
         memory: 512Mi
+    snapshotsEnabled: true
     configuration:
+      features: EnableCSI
       backupStorageLocation:
       - name: minio
         provider: aws
@@ -87,6 +89,12 @@ spec:
     initContainers:
     - name: velero-plugin-for-aws
       image: velero/velero-plugin-for-aws:v1.10.0
+      imagePullPolicy: IfNotPresent
+      volumeMounts:
+        - mountPath: /target
+          name: plugins
+    - name: velero-plugin-for-csi
+      image: velero/velero-plugin-for-csi:v0.7.1
       imagePullPolicy: IfNotPresent
       volumeMounts:
         - mountPath: /target
