--- a/infrastructure/base/velero/manifest.yaml
+++ b/infrastructure/base/velero/manifest.yaml
@@ -56,7 +56,7 @@ spec:
       limits:
         cpu: 1000m
         memory: 512Mi
-    snapshotsEnabled: true
+    snapshotsEnabled: "true"
     configuration:
       features: EnableCSI
       backupStorageLocation:
@@ -99,3 +99,14 @@ spec:
       volumeMounts:
         - mountPath: /target
           name: plugins
+---
+kind: VolumeSnapshotClass
+apiVersion: snapshot.storage.k8s.io/v1
+metadata:
+  name: longhorn-snapshot-vsc
+  labels:
+    velero.io/csi-volumesnapshot-class: "true"
+driver: driver.longhorn.io
+deletionPolicy: Delete
+parameters:
+  type: bak
