--- a/infrastructure/base/velero/manifest.yaml
+++ b/infrastructure/base/velero/manifest.yaml
@@ -22,7 +22,7 @@ spec:
   interval: 5m0s
   url: https://github.com/kubernetes-csi/external-snapshotter
   ref:
-    semver: "8.0.x"
+    semver: "6.3.2"
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
