--- a/infrastructure/base/traefik/manifest.yaml
+++ b/infrastructure/base/traefik/manifest.yaml
@@ -77,28 +77,28 @@ spec:
         allowExternalNameServices: true
         publishedService:
           enabled: false
-      file:
-        # -- Create a file provider
-        enabled: true
-        # -- Allows Traefik to automatically watch for file changes
-        watch: true
-        # -- File content (YAML format, go template supported) (see https://doc.traefik.io/traefik/providers/file/)
-        content: |
-          # http routing section
-          http:
-            routers:
-              homeassistant:
-                rule: "Host(`james.vandelocht.uk`)"
-                service: homeassistant
-                entryPoints:
-                  - websecure
-                tls:
-                  secretName: james-vandelocht-uk-production-tls
-            services:
-              homeassistant:
-                loadBalancer:
-                  servers:
-                    - url: "http://192.168.178.44:8123"
+      # file:
+      #   # -- Create a file provider
+      #   enabled: true
+      #   # -- Allows Traefik to automatically watch for file changes
+      #   watch: true
+      #   # -- File content (YAML format, go template supported) (see https://doc.traefik.io/traefik/providers/file/)
+      #   content: |
+      #     # http routing section
+      #     http:
+      #       routers:
+      #         homeassistant:
+      #           rule: "Host(`james.vandelocht.uk`)"
+      #           service: homeassistant
+      #           entryPoints:
+      #             - websecure
+      #           tls:
+      #             secretName: james-vandelocht-uk-production-tls
+      #       services:
+      #         homeassistant:
+      #           loadBalancer:
+      #             servers:
+      #               - url: "http://192.168.178.44:8123"
 
     rbac:
       enabled: true
@@ -126,5 +126,44 @@ spec:
   commonName: "james.vandelocht.uk"
   dnsNames:
   - "james.vandelocht.uk"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: home-assistant-service
+  namespace: traefik
+spec:
+  type: ClusterIP
+  ports:
+    - port: 8123
+      targetPort: 8123
+---
+kind: Endpoints
+apiVersion: v1
+metadata:
+  name: home-assistant-service
+  namespace: traefik
+subsets:
+  - addresses:
+      - ip: 192.168.178.44
+    ports:
+      - port: 8123
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: home-assistant-ingress
+  namespace: traefik
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`james.vandelocht.uk`)
+      kind: Rule
+      services:
+        - name: home-assistant-service
+          port: 8123
+  tls:
+    secretName: james-vandelocht-uk-production-tls
 
 
