--- a/infrastructure/production/traefik/config/externalServices.yaml
+++ b/infrastructure/production/traefik/config/externalServices.yaml
@@ -35,7 +35,7 @@ subsets:
     ports:
       - port: 8123
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: home-assistant-ingress
