traefik: switched to internal domain.

--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -44,7 +44,7 @@ spec:
           allowedIpRanges:
           - "0.0.0.0/0"
           localRecords:
-          - name: "proxmox.lan.vandelocht.uk"
+          - name: "nashorn.lan.vandelocht.uk"
             ip: "192.168.178.40"
           - name: "traefik.lan.vandelocht.uk"
             ip: "192.168.178.151"
