--- a/apps/production/gitea/ingressConfig.yaml
+++ b/apps/production/gitea/ingressConfig.yaml
@@ -47,6 +47,6 @@ spec:
     # stsIncludeSubdomains: true
     # stsPreload: true
     # stsSeconds: 15552000
-    # customFrameOptionsValue: SAMEORIGIN
+    customFrameOptionsValue: SAMEORIGIN
     customRequestHeaders:
       X-Forwarded-Proto: https
