--- a/apps/production/gitea/ingressConfig.yaml
+++ b/apps/production/gitea/ingressConfig.yaml
@@ -43,7 +43,7 @@ spec:
   headers:
     browserXssFilter: true
     contentTypeNosniff: true
-    # forceSTSHeader: true
+    forceSTSHeader: true
     # stsIncludeSubdomains: true
     # stsPreload: true
     # stsSeconds: 15552000
