gitea: added stsIncludeSubdomains

--- a/apps/production/gitea/ingressConfig.yaml
+++ b/apps/production/gitea/ingressConfig.yaml
@@ -44,7 +44,7 @@ spec:
     browserXssFilter: true
     contentTypeNosniff: true
     forceSTSHeader: true
-    # stsIncludeSubdomains: true
+    stsIncludeSubdomains: true
     # stsPreload: true
     # stsSeconds: 15552000
     customFrameOptionsValue: SAMEORIGIN
