--- a/apps/production/gitea/ingressConfig.yaml
+++ b/apps/production/gitea/ingressConfig.yaml
@@ -46,7 +46,7 @@ spec:
     forceSTSHeader: true
     stsIncludeSubdomains: true
     stsPreload: true
-    # stsSeconds: 15552000
+    stsSeconds: 15552000
     customFrameOptionsValue: SAMEORIGIN
     customRequestHeaders:
       X-Forwarded-Proto: https
