hibiscus: disabled named pvc for postgres

--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -114,7 +114,7 @@ spec:
     primary:
       service:
         type: LoadBalancer
-      persistence:
-        existingClaim: hibiscus-mysql-pvc
+      # persistence:
+        # existingClaim: hibiscus-mysql-pvc
     networkPolicy:
       enabled:
